--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
 
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://scontent.fsgn2-6.fna.fbcdn.net/v/t39.30808-6/432368699_122107207838232656_6577726678867768568_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=5f2048&_nc_ohc=UrF4gyqGPlAAX-Fzgg5&_nc_oc=AdicbvROzHmgWNWnCI_CTw700eczZQC4sirSYN6-GSELgTugwPJshNGEW0NZeBYn-CZLLf-IbOvzl0moDOG930_D&_nc_ht=scontent.fsgn2-6.fna&oh=00_AfBTDp3MppwL0z_-N0qKzSUFzBmtz3w9Eq_Buvit5b_qgw&oe=65FF577C" />
+    <link rel="icon" href="/images/logo-mb.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
-    <link rel="apple-touch-icon" href="https://scontent.fsgn2-6.fna.fbcdn.net/v/t39.30808-6/432368699_122107207838232656_6577726678867768568_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=5f2048&_nc_ohc=UrF4gyqGPlAAX-Fzgg5&_nc_oc=AdicbvROzHmgWNWnCI_CTw700eczZQC4sirSYN6-GSELgTugwPJshNGEW0NZeBYn-CZLLf-IbOvzl0moDOG930_D&_nc_ht=scontent.fsgn2-6.fna&oh=00_AfBTDp3MppwL0z_-N0qKzSUFzBmtz3w9Eq_Buvit5b_qgw&oe=65FF577C" />
+    <link rel="apple-touch-icon" href="/images/logo-mb.png" />
     <!-- google font -->
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Open+Sans&display=swap" rel="stylesheet" />
     <!-- bootstrap -->
